Add Claude Prime  configuration files
Added initial configuration and agent definition files for the Claude Prime environment, including .gitignore updates, agent role descriptions, project metadata, and MCP server settings. These changes establish the foundational structure for project-specific tooling, agent workflows, and environment management.

--- a/.gitignore
+++ b/.gitignore
@@ -198,3 +198,9 @@ dmypy.json
 .pytype/
 # Cython debug symbols
 cython_debug/ 
+*.lock
+/claude-prime/shell-snapshots
+/cursor-prime/extensions
+/claude-prime/projects
+/claude-prime/statsig
+/claude-prime/todos
