Add goosehints and books_read.txt, update .gitignore
Added a .goosehints file with a note about MQTT logging and a books_read.txt file with a summary of '1984'. Updated .gitignore to exclude new directories and config files in goose_prime.

--- a/.gitignore
+++ b/.gitignore
@@ -204,3 +204,6 @@ cython_debug/
 /claude-prime/projects
 /claude-prime/statsig
 /claude-prime/todos
+/goose_prime/mcp-hermit
+goose_prime/sessions
+goose_prime/config.yaml
